# The-Documents-Manager

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README.md.save  SeachEngine.py  TEST_REPORT.md  config.py  config.yaml  config_docker.py  loader.py  main.py  pyproject.toml  receive.py  requirements.txt  requirements_api.txt  send.py  start_api.sh  test.ipynb  test_api.py  test_chat_implementation.py  texts.txt  upload.py
The-Document-Manager-v2/: .env  .env.example  LICENSE
The-Document-Manager-v2/app/: __init__.py
The-Document-Manager-v2/app/api/: routes.py
The-Document-Manager-v2/app/core/: exceptions.py
The-Document-Manager-v2/app/providers/embedding/: __init__.py  ollama.py
The-Document-Manager-v2/app/providers/vector_db/: qdrant.py
The-Document-Manager-v2/app/services/: search_service.py
The-Document-Manager-v2/config/: config.prod.yaml  config.yaml.example
The-Document-Manager-v2/docker/: docker-compose.yml  entrypoint.sh
The-Document-Manager-v2/tools/: check_config.py
app/: __init__.py  main.py
app/api/: models.py  routes.py.backup
app/core/: config.py  exceptions.py
app/providers/: base.py
app/providers/chat/: __init__.py  ollama.py
app/providers/vector_db/: __init__.py  qdrant.py
app/services/: chat_service.py  search_service.py
config/: config.dev.yaml  config.yaml.example
docker/: Dockerfile  docker-compose.yml
notebooks/: test.ipynb
scripts/: receive.py  send.py  upload_to_s3.py
tests/: conftest.py  test_api.py  test_config.py
tools/: verify_migration.py
v1/: .dockerignore  app.py  config.py  models.py  qdrant_manager.py  requirements.txt  search_service.py  start_api.sh
v1/.github/instructions/: copilot-instruction.md.instructions.md
v1/notebooks/: test_Copy.ipynb
v1/scripts/: upsert_to_vectorDB.py
